# webserv

./: CMakeLists.txt  Makefile  README.md
YoupiBanane/: youpi.bad_extension  youpi.bla
YoupiBanane/nop/: other.pouic  youpi.bad_extension
authorization_config/: .htpasswd
configuration_files/invalid/: duplicate_ports.conf  missing_closing_bracket.conf  missing_error_pages.conf  missing_port.conf  missing_timeout.conf
configuration_files/valid/: default.conf  siege.conf  test.conf  test_delete.conf
nginx_docker_tester/: dockerfile  setup.sh
nginx_docker_tester/srcs/: index.html  nginx.conf  style.css  test_index.html  test_nginx.conf
server_files/www/: adduser.php  index.html  style.css  test_two.html
server_files/www/downloads/: index.php
server_files/www/error_pages/: 400.html  401.html  402.html  403.html  404.html  405.html  406.html  407.html  408.html  409.html  410.html  411.html  412.html  413.html  414.html  415.html  416.html  417.html  426.html  500.html  501.html  502.html  503.html  504.html  (+2 more)
webserver/: main.cpp
webserver/gnl/: get_next_line.cpp  get_next_line.hpp  get_next_line_utils.cpp
webserver/helper/: check_functions.cpp  helper.hpp  lib_functions.cpp  parse_functions.cpp  signal_handler.cpp  verify_file_location_functions.cpp
webserver/server/: Base64.cpp  Base64.hpp  client.cpp  client.hpp  file_descriptors.cpp  file_descriptors.hpp  header_handler.cpp  header_handler.hpp  location_context.cpp  location_context.hpp  request_buf.cpp  request_buf.hpp  response.cpp  response.hpp  server.cpp  server.hpp  webserver.cpp  webserver.hpp
(+2 files in other folders)
